# Barcode-Scanner

./: CMakeLists.txt
include/: Defines.h  checkBarcode.h  dataInput.h  dataProcessing.h
src/: checkBarcode.c  dataInput.c  dataProcessing.c  main.c
